--- a/petbook/Style.css
+++ b/petbook/Style.css
@@ -6,6 +6,20 @@
 
 }
     
+.ft{
+    background-color: #ffd6e8;
+}
+
+
+.bn{
+    background-color: #ffd6e8;
+}
+
+.meio{
+
+    background-color: #ffd6e8;
+}
+
 
    /* .content label{display: block; font-size: 30px;}
 
