--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,76 @@
+*{
+    margin: 0px;
+}
+
+.menu{
+    display: flex;
+    
+}
+
+
+nav{
+    /* background-color: red; */
+    display: flex;
+    margin:  0 auto;
+   
+}
+
+
+nav{
+    display: flex;
+    margin: 0 auto;
+}
+.header{
+    display: flex;
+    position: fixed;
+    float: inline-end;
+    flex-wrap: wrap;
+    color: white;
+    background-color: black;
+    font-weight: bold;
+    width: 100%;
+    padding: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+ul, li, p{
+    list-style: none;
+    font-size: 1rem;
+    padding: 0px;
+}
+.menu li{
+    margin-left: 20px;
+    display:block;
+    text-align: center;
+}
+li.active a{
+    border-bottom: 5px solid white;
+    border-radius: 3px;
+    transition: 0.2s ease;
+}
+a{
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+}
+.menu li a {
+    color: #FFF;
+    text-transform: uppercase;
+    text-decoration: none;
+    margin: 0 auto;
+    text-align: center;
+    height: 30px;
+}
+a:hover {
+    border-bottom: 5px solid white;
+    border-radius: 2px;
+    transition: 0.3s ease;
+    } */
+    .menu li a:hover, .menu li.active a {
+    border-bottom: 5px solid white;
+    border-radius: 3px;
+    transition: 0.3s ease;
+}
 
 
 #bt{
@@ -14,11 +87,13 @@
 
 .bn{
     background-color: #ffd6e8;
+    z-index: 1;
 }
 
 .meio{
     display: block;
     background-color: #ffd6e8;
+    z-index: 0;
 }
 #botao{
 
