--- a/css/Style.css
+++ b/css/Style.css
@@ -62,7 +62,16 @@ a {
 }
 
 .filesPost:hover {
-    background: red;
+    background: rgb(188, 47, 47);
+}
+
+.filesComent:hover {
+    background: rgb(176, 172, 173);
+}
+
+.filesComent {
+    background: white;
+    border-radius: 20px;
 }
 
 .filesPost {
@@ -92,7 +101,8 @@ a {
     max-width: 50%;
     border-radius: 10px;
 }
-.response{
+
+.response {
     display: flex;
 }
 
